src/styles/components/_footer.scss
footer {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  align-content: center;
  height: $footer-height;
  z-index: 1000;
  background-color: $main-color;

  .wrapper {
    flex-grow: 1;
  }

  .main-menu {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  li {
    width: 56px;
    height: 56px;
    border: 2px solid $accent-color;
    border-radius: 28px;
    background-color: $main-color;
    cursor: pointer;
  }

  a {
    display: block;
    position: relative;
    width: 100%;
    height: 100%;
  }

  img {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 28px;
    transform: translate(-50%, -50%);
  }

  .icon-btn--create-review {
    background-color: white;
  }

  .nav-link--home,
  .nav-link--profile {
    transform: translate(0, -2px);
  }

  // Profile Menu
  .icon-btn--profile-menu {
    position: relative;

    .profile-menu {
      li {
        position: absolute;
        top: -2px;
        left: -2px;
        transition: transform 0.3s ease-in-out;
      }

      .icon-btn--portrait {
        z-index: 1003;

        .icon--portrait {
          width: 100%;
          border-radius: 50%;
        }
      }

      .icon-btn--profile {
        z-index: 1002;
      }

      .icon-btn--logout {
        z-index: 1001;
      }
    }

    .profile-menu-open .icon-btn--profile {
      transform: translateY(calc(-56px - 1.5rem));
    }

    .profile-menu-open .icon-btn--logout {
      transform: translateY(calc(-112px - 3rem));
    }
  }
}

